--- a/css/header.css
+++ b/css/header.css
@@ -19,9 +19,16 @@
 
     header nav ul li {
         font-size: 1.8em;
-        margin-right: 5em;
+        margin-right: 7.6em;
         z-index: 1;
         
+    }
+
+    .active-nav{
+        border: 2px solid red;
+        border-radius: 7px;
+        padding: 2px 5px;
+        box-shadow: 0px 5px 5px 0px #d5e0d8;
     }
 
 
@@ -35,7 +42,7 @@
 
     header nav ul li a:hover {
         color: #fff;
-    text-shadow: 0px 3px 3px 0px #daf5f5;
+        text-shadow: 0px 3px 3px 0px #daf5f5;
     
     }
 
