--- a/css/header.css
+++ b/css/header.css
@@ -29,6 +29,8 @@
         border-radius: 7px;
         padding: 2px 5px;
         box-shadow: 0px 5px 5px 0px #d5e0d8;
+        color: #000;
+        
     }
 
 
